# CcspLMLite

./: Makefile.am  configure.ac  genautotools.ini
patches/: CcspLMLite-source-lm_main.c.patch  CcspLMLite-source-lm_wrapper.c.patch  CcspLMLite-source-lm_wrapper.h.patch
source/: Makefile.am  lm_main.h
